feat(flexlb): configure discovery per endpoint